# armenian-video-dubbing

./: pyproject.toml  requirements-colab.txt
configs/: crawl_config.yaml  environment.yaml
configs/profiles/: colab_t4_demo.yaml  lightning_a100_80gb_full.yaml  lightning_h100_full.yaml  lightning_l4_demo.yaml
docker/: requirements-docker.txt
docs/: README.md  colab_t4_demo.md  index.md  lightning_ai.md
scripts/data_collection/: download_cv_tiny.py  download_fleurs_eval.py  download_flores_eval.py  labelstudio_setup.py  prepare_lipsync_data.py  youtube_crawl.py
scripts/deployment/: setup_lightning_a100.sh  setup_lightning_h100.sh
scripts/inference/: prepare_demo_video.py
scripts/training/: export_models.py  publish_a100_release.sh  publish_h100_release.sh  train_asr.py  train_tts.py
src/: inference.py
src/pipeline/: __init__.py  __main__.py  pipeline.py
src/ui/: gradio_app.py
tests/: test_pipeline.py
